crates/swc_ecma_parser/tests/typescript-errors/instantiation-expr/case2/input.ts.stderr
error: Expected '(', got ';'
 --> $DIR/tests/typescript-errors/instantiation-expr/case2/input.ts:1:23
  |
1 | const b1 = f?.<number>;
  |                       ^

