crates/swc_ecma_parser/tests/typescript-errors/instantiation-expr/case2/input.ts
const b1 = f?.<number>;
